Changed a way of initializing data structures without using .of(...)